# nano-deep-research

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: manager.py
app/agents/: planner_agent.py  search_agent.py  writer_agent.py
app/api/endpoints/: competitor-analysis.py
app/api/services/: manager.py
app/api/services/agents/: search_agent.py  writer_agent.py
app/api/utils/: printer.py
app/api/v1/: __init__.py  requests.py  router.py
app/api/v1/responses/: api_error.py  responses.py
app/schemas/: __init__.py  common.py  competitor.py  report.py  request.py
app/utils/: commons.py  logger.py
docs/: api-docs.yaml
tests/: test.py
