[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Competitor Analysis"
version = "0.0.1"
description = "Competitor Research with Tavily"
authors = [
    {name = "Enric Rovira", email = "enric.rovira96@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11.9"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.3.0",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]